# resutil

./: .gitignore  LICENSE  README.ja.md  README.md  __init__.py  pyproject.toml  sample.py
.github/workflows/: publish.yaml
docs/: storage.md
results/: .gitignore
src/resutil/: __init__.py  config_file.py  core.py  ex_dir.py  exp_file.py  git.py  main.py  utils.py
src/resutil/cli/: __init__.py  __main__.py  cli_main.py
src/resutil/storage/: __init__.py  storage.py
src/resutil/storage/box/: box.py  box_client.py
src/resutil/storage/gcs/: gcs.py
src/resutil/storage/gdrive/: gdrive.py
src/resutil/storage/gs/: gs.py  gs_client.py
test/: sample.py
tests/: test_ex_dir.py  test_utils.py
