[project]
name = "resutil"
version = "0.1.20"
description = "Resutil is a utility to manage experimental result data obtained from Python projects. It also manages dependency such as codes and input data with result data. Data is synced to the cloud for team sharing and collaboration."
authors = [{ name = "nobkat", email = "katayama@rs.tus.ac.jp" }]
dependencies = [
    "pyyaml>=6.0.0",
    "rich>=13.7.0",
    "pytest-mock>=3.14.0",
    "gitpython>=3.1.0",
    "google-cloud-storage>=2.17.0",
    "google-auth>=2.30.0",
    "prompt-toolkit>=3.0.47",
    "google-api-python-client>=2.133.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "pyreadline3>=3.5.4; platform_system == 'Windows'",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { file = "LICENSE" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "wheel>=0.43.0",
    "twine>=5.0.0",
    "flake8>=7.0.0",
    "black>=24.4.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.10.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/resutil"]

[project.scripts]
resutil = 'resutil.cli:main'

[project.urls]
Homepage = "https://github.com/KatayamaLab/resutil"
Issues = "https://github.com/KatayamaLab/resutil/issues"
